<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">领泰医疗</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_delete">删&#160;&#160;&#160;&#160;&#160;除</string>
    <string name="btn_update">修&#160;&#160;&#160;&#160;&#160;改</string>
    <string name="device_type">设备类型:</string>
    <string name="setting_more">更多内容</string>
    <string name="btn_match">配&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;对</string>
    <string name="add_new_device">新增设备</string>
    <string name="use_help">使用帮助</string>
    <string name="check_history">检&#160;&#160;测&#160;&#160;历&#160;&#160;史</string>
    <string name="begin_check">开&#160;&#160;始&#160;&#160;检&#160;&#160;测</string>
    <string name="connecting">正&#160;&#160;在&#160;&#160;连&#160;&#160;接</string>
    <string name="click_retry">点&#160;&#160;击&#160;&#160;重&#160;&#160;试</string>
    <string name="systolic_blood_pressure">收缩压</string>
    <string name="diastolic_blood_pressure">舒张压</string>
    <string name="current_pressure">压力值</string>
    <string name="heart_rate">脉搏值</string>
    <string name="blood_sugar">血糖值</string>
    <string name="result_suggest">结果建议&#160;&#160;:</string>
    <string name="blood_check_result">恭喜您！本次测量在正常范围内</string>
    <string name="ewm_description">智慧医疗二维码</string>
    <string name="company_name">苏州领泰数字医疗设备有限公司</string>
    <string name="img_dot">指示点</string>
    <string name="action_add_device">新增设备</string>
    <string name="action_change_name">修改名称</string>
    <string name="action_cancel_change">完成修改</string>
    <string name="action_delete_deivce">删除设备</string>
    <string name="action_cancel_delete">取消删除</string>
    <string name="action_login">登录</string>
    <string name="btn_record">记&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="ask_when_exit">再按一次退出程序</string>
    <string name="title_activity_blood_sugar_check">BloodSugarCheckActivity</string>
    <string name="fh_value">胎心值</string>
    <string name="systolic">收缩压</string>
    <string name="systolic_value">0/mmHg</string>
    <string name="diastolic">舒张压</string>
    <string name="diastolic_value">0/mmhg</string>
    <string name="nodata">暂无数据</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="logo_name">领泰医疗</string>
    <string name="hint_username">请输入身份证/手机号码</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="remember_psw">记住密码</string>
    <string name="btn_login">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="btn_register">注&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;册</string>
    <string name="msg_fist_data">已经是第一条数据</string>
    <string name="msg_last_data">已经是最后一条数据</string>
    <string name="current_version">当前版本为： </string>
    <!-- remind -->
    <string name="remind_device_not_support">您的手机不支持BLE</string>
    <string name="remind_ble_must_open">使用本软件必须开启蓝牙</string>
    <string name="scan_failed">没有扫描到匹配的新设备，请确保设备已开启</string>
    <string name="scan_success">匹配成功</string>
    <string name="con_failed">连接失败，确保对应设备已经开启</string>
    <string name="bp_result_ideal">理想血压</string>
    <string name="bp_result_normal">正常血压</string>
    <string name="bp_result_hbp">高血压</string>
    <string name="bp_result_cri_hbp">临界高血压</string>
    <string name="bp_result_lbp">低血压</string>
    <string name="bp_result_pre_hbp">高血压前期</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_about">关&#160;于&#160;我&#160;们</string>
    <string name="title_activity_guide_view">使&#160;用&#160;帮&#160;助</string>
    <string name="title_fragment_device">设&#160;备&#160;列&#160;表</string>
    <string name="title_fragment_settings">设&#160;&#160;&#160;&#160;置</string>
    <string name="title_activity_find_pwd">通过手机号找回</string>
    <string name="bp_text">血&#160;压&#160;计</string>
    <string name="bs_text">血&#160;糖&#160;仪</string>
    <string name="fh_text">胎&#160;心&#160;仪</string>
    <string name="device_exist">该设备已经存在设备列表中</string>
    <string name="scaning">正在扫描设备</string>
    <string name="ask_del_device">是否删除设备？</string>
    <string name="ask_upload">上传将会耗费您一定的流量，是否确定上传？</string>
    <string name="no_data_available">未检测到数据</string>
    <string name="plues_blood_pressure">脉搏值</string>
    <string name="required">(必填)</string>
    <string name="reg_name">姓名</string>
    <string name="reg_phone_num">手机号码</string>
    <string name="reg_auth_code">验证码</string>
    <string name="reg_send">发送</string>
    <string name="reg_send_msg">(60秒后重发)</string>
    <string name="reg_identity_card">身份证号码</string>
    <string name="reg_psw">密码</string>
    <string name="reg_conform_psw">确认密码</string>
    <string name="reg_now">立即注册</string>
    <string name="reg_psw_again">请再次输入密码</string>
    <string name="reg_psw_hint">请填写6-20位字符</string>
    <string name="reg_auth_msg">我已阅读并同意以上条款</string>
    <string name="reg_title">注册</string>
    <string name="network_error">无网络或网络异常</string>
    <string name="login_success">登录成功</string>
    <string name="login_check">请输入用户名和密码</string>
    <string name="register_success">注册成功</string>
    <string name="required_msg">请输入必填项</string>
    <string name="name_fromat_error">姓名为中文和英文且 至少两位</string>
    <string name="pwd_format_error">密码为6-20个字符</string>
    <string name="phone_format_error">请输入正确的手机号码</string>
    <string name="idcard_format_error">身份证格式不正确</string>
    <string name="pwd_conform_error">两次密码不匹配</string>
    <string name="retry">重试</string>
    <string name="icon_description">this is logo</string>
    <string name="title_activity_regist">RegistActivity</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_verify_code">验证码</string>
    <string name="hint_input_new_pwd">请输入新密码</string>
    <string name="hint_conform_new_pwd">请再次确认新密码</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="confirm">确认</string>

</resources>
