<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_light_gray"
    tools:context="com.lichkin.activity.FindPwdActivity" >

    <RelativeLayout
        android:id="@+id/find_pwd_toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorPrimary" >

        <RelativeLayout
            android:id="@+id/find_pwd_back"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/action_back" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_find_pwd"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_find"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_find_pwd_confirm_bg"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_find"
        android:layout_below="@id/find_pwd_toolbar"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" >

        <EditText
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/text_verify_code"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/hint_verify_code" />

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#7EB5D9"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/send_verify_code"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/hint_input_new_pwd" />

        <EditText
            android:id="@+id/text_conform_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:hint="@string/hint_conform_new_pwd" />
    </LinearLayout>

</RelativeLayout>